--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,4 +127,4 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -var-file=${{ steps.changed-files.outputs.files }}
+        run: terraform apply -auto-approve -var="file_change=${{ steps.changed-files.outputs.files }}"
