--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,19 +22,19 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v3
 
-      # - name: Configure AWS credentials from AWS account
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     role-to-assume: ${{ secrets.AWS_ROLE }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
-      #     role-session-name: GitHub-OIDC-TERRAFORM
-
-      - name: Configure AWS credentials
+      - name: Configure AWS credentials from AWS account
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
+          role-session-name: GitHub-OIDC-TERRAFORM
+
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
 
       - name: Checkout code
